check from vscode

--- a/templates/home.html
+++ b/templates/home.html
@@ -1,54 +1,69 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Python Website using Flask</title>
-  <style>
-    *{
-      box-sizing:border-box;
-    }
-    h1{
-      font-size:40px;
-      font-family: Roboto;
-      font-weight:normal;
-      color: rgb(100,100,100);
-      text-align: center;
-      
-    }
-    .bodytext{
-      font-size:15px;
-      font-family: sans serif;
-    }
-    #banner{
-     
-      width:100%;
-       height:auto;
-      object-fit:cover;
-    }
-    h2{
-      font-family:roboto;
-      font-size:32px;
-      color: rgb(100, 100, 100);
-      text-align: center;
-    }
-    #container{
-      max-width: 720px;
-      margin: 0 auto 0 auto;
-      
-    }
-  </style>
-</head>
-<body>
-  <div id="container">
-  <h1>Crusader Kings 3</h1>
-  <p>Home Page - Python Website Using Flask</p>
-  <img id="banner" src="https://www.gamewallpapers.com/wallpapers_slechte_compressie/01wallpapers/wallpaper_crusader_kings_3_01_1920x1080.jpg" height="320">
-<p class="bodytext">CrusaderCrusader Kings 3, the latest offering from Paradox Interactive, successfully aligns the desires of its fictional rulers with its real-world players. The player starts by controlling a single ruler, eventually leading and growing their dynastic line over hundreds of years of feudal history. Throughout, the game balances randomness with the opportunity for real improvisation on the part of the player. The result is an elastic storytelling engine that brings into focus the kinds of personal conflicts that make it so fascinating to study real history.</p>  
-  <h2>Open Positions</h2>
-  <p class="bodytext">TODO - Show the jobs here</p>
-    <div style="text-align:center";>
-  <button id="contactbutton">Contact Us</button>
-      <p style="font-family:Times New Roman">Copyright 2023, Banegaming1525</p>
+  <head>
+    <title>Python Website using Flask</title>
+    <style>
+      * {
+        box-sizing: border-box;
+      }
+      h1 {
+        font-size: 40px;
+        font-family: Roboto;
+        font-weight: normal;
+        color: rgb(100, 100, 100);
+        text-align: center;
+      }
+      .bodytext {
+        font-size: 15px;
+        font-family: sans serif;
+      }
+      #banner {
+        width: 100%;
+        height: auto;
+        object-fit: cover;
+      }
+      h2 {
+        font-family: roboto;
+        font-size: 32px;
+        color: rgb(100, 100, 100);
+        text-align: center;
+      }
+      #container {
+        max-width: 720px;
+        margin: 0 auto 0 auto;
+      }
+    </style>
+  </head>
+  <body>
+    <div id="container">
+      <h1>Crusader Kings 3</h1>
+      <p>Home Page - Python Website Using Flask</p>
+      <img
+        id="banner"
+        src="https://www.gamewallpapers.com/wallpapers_slechte_compressie/01wallpapers/wallpaper_crusader_kings_3_01_1920x1080.jpg"
+        height="320"
+      />
+      <p class="bodytext">
+        CrusaderCrusader Kings 3, the latest offering from Paradox Interactive,
+        successfully aligns the desires of its fictional rulers with its
+        real-world players. The player starts by controlling a single ruler,
+        eventually leading and growing their dynastic line over hundreds of
+        years of feudal history. Throughout, the game balances randomness with
+        the opportunity for real improvisation on the part of the player. The
+        result is an elastic storytelling engine that brings into focus the
+        kinds of personal conflicts that make it so fascinating to study real
+        history.
+      </p>
+      <h2>Open Positions</h2>
+      <p class="bodytext">TODO - Show the jobs here</p>
+      <div style="text-align: center" ;>
+        <button id="contactbutton">Contact Us</button>
+        <p style="font-family: Times New Roman">
+          Copyright 2023, Banegaming1525
+        </p>
+      </div>
     </div>
-    </div>
-</body>
-  </html>
+  </body>
+</html>
+
+--checking from VS CODEasdfsadf
