--- a/templates/home.html
+++ b/templates/home.html
@@ -27,10 +27,15 @@
         font-size: 32px;
         color: rgb(100, 100, 100);
         text-align: center;
+        font-weight: normal;
       }
       #container {
         max-width: 720px;
         margin: 0 auto 0 auto;
+      }
+      p {
+        font-family: Roboto;
+        color: rgb(80, 80, 80);
       }
     </style>
   </head>
@@ -65,5 +70,3 @@
     </div>
   </body>
 </html>
-
---checking from VS CODEasdfsadf
