--- a/templates/home.html
+++ b/templates/home.html
@@ -2,53 +2,42 @@
 <html>
   <head>
     <title>Python Website using Flask</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9"
+      crossorigin="anonymous"
+    />
     <style>
-      * {
-        box-sizing: border-box;
-      }
-      h1 {
-        font-size: 40px;
-        font-family: Roboto;
-        font-weight: normal;
-        color: rgb(100, 100, 100);
-        text-align: center;
-      }
-      .bodytext {
-        font-size: 15px;
-        font-family: sans serif;
-      }
       #banner {
+        height: 360px;
         width: 100%;
-        height: auto;
-        object-fit: cover;
-      }
-      h2 {
-        font-family: roboto;
-        font-size: 32px;
-        color: rgb(100, 100, 100);
-        text-align: center;
-        font-weight: normal;
-      }
-      #container {
-        max-width: 720px;
-        margin: 0 auto 0 auto;
-      }
-      p {
-        font-family: Roboto;
-        color: rgb(80, 80, 80);
       }
     </style>
   </head>
   <body>
-    <div id="container">
-      <h1>Crusader Kings 3</h1>
-      <p>Home Page - Python Website Using Flask</p>
+    <nav class="navbar bg-body-tertiary">
+      <div class="shadow-lg container-fluid">
+        <a
+          style="font-family: fangsong"
+          class="navbar-brand"
+          href="https://www.youtube.com/@Bane1525"
+          >BaneNZ</a
+        >
+      </div>
+    </nav>
+    <div class="container">
+      <h1 class="text-center mt-2 mb-4">Crusader Kings 3</h1>
+      <p class="mt-2 mb-4">Home Page - Python Website Using Flask</p>
       <img
+        class="img-fluid"
         id="banner"
         src="https://www.gamewallpapers.com/wallpapers_slechte_compressie/01wallpapers/wallpaper_crusader_kings_3_01_1920x1080.jpg"
         height="320"
       />
-      <p class="bodytext">
+      <p class="lead">
         CrusaderCrusader Kings 3, the latest offering from Paradox Interactive,
         successfully aligns the desires of its fictional rulers with its
         real-world players. The player starts by controlling a single ruler,
@@ -59,13 +48,12 @@
         kinds of personal conflicts that make it so fascinating to study real
         history.
       </p>
-      <h2>Open Positions</h2>
-      <p class="bodytext">TODO - Show the jobs here</p>
-      <div style="text-align: center" ;>
-        <button id="contactbutton">Contact Us</button>
-        <p style="font-family: Times New Roman">
-          Copyright 2023, Banegaming1525
-        </p>
+      <p>{% for job in jobs %} {%endfor %}</p>
+      <h2 class="text-center mt-2 mb-4">Open Positions</h2>
+      <p>TODO - Show the jobs here</p>
+      <div class="text-center">
+        <button type="button" class="btn btn-primary btn-sm">Contact Us</button>
+        <p class="mt-4">Copyright 2023, Banegaming1525</p>
       </div>
     </div>
   </body>
