--- a/templates/home.html
+++ b/templates/home.html
@@ -18,7 +18,8 @@
     </style>
   </head>
   <body>
-    <nav class="navbar bg-body-tertiary">
+    {% include 'nav.html' %}
+    <!--<nav class="navbar bg-body-tertiary">
       <div class="shadow-lg container-fluid">
         <a
           style="font-family: fangsong"
@@ -27,7 +28,7 @@
           >{{Website}}</a
         >
       </div>
-    </nav>
+    </nav>-->
     <div class="container">
       <h1 class="text-center mt-2 mb-4">Crusader Kings 3</h1>
       <p class="mt-2 mb-4">Home Page - Python Website Using Flask</p>
@@ -35,9 +36,9 @@
         class="img-fluid"
         id="banner"
         src="https://www.gamewallpapers.com/wallpapers_slechte_compressie/01wallpapers/wallpaper_crusader_kings_3_01_1920x1080.jpg"
-        height="320"
+        style="height: 320px; border-radius: 4px; "
       />
-      <p class="lead">
+      <p class="mt-4 lead">
         CrusaderCrusader Kings 3, the latest offering from Paradox Interactive,
         successfully aligns the desires of its fictional rulers with its
         real-world players. The player starts by controlling a single ruler,
@@ -54,10 +55,11 @@
           {% include 'gameitem.html' %}  <!-- getting data from gameitem.html to home.html-->
         {% endfor %}
       </div>
+      
       <div class="text-center">
         <button type="button" class="btn btn-primary btn-sm">Contact Us</button>
-        <p class="mt-4">Copyright 2023, Banegaming1525</p>
       </div>
     </div>
+    {% include 'footer.html' %}
   </body>
 </html>
