--- a/templates/home.html
+++ b/templates/home.html
@@ -36,7 +36,7 @@
         class="img-fluid"
         id="banner"
         src="https://www.gamewallpapers.com/wallpapers_slechte_compressie/01wallpapers/wallpaper_crusader_kings_3_01_1920x1080.jpg"
-        style="height: 320px; border-radius: 4px; "
+        style="height: 320px; border-radius: 4px"
       />
       <p class="mt-4 lead">
         CrusaderCrusader Kings 3, the latest offering from Paradox Interactive,
@@ -49,13 +49,15 @@
         kinds of personal conflicts that make it so fascinating to study real
         history.
       </p>
-      <h2 class="text-center mt-4 mb-4">Open Positions</h2>
+      <h2 class="text-center" style="margin-top: 100px; margin-bottom: 100px">
+        GAMES DETAILS
+      </h2>
       <div>
-        {% for i in games %}
-          {% include 'gameitem.html' %}  <!-- getting data from gameitem.html to home.html-->
+        {% for i in games %} {% include 'gameitem.html' %}
+        <!-- getting data from gameitem.html to home.html-->
         {% endfor %}
       </div>
-      
+
       <div class="text-center">
         <button type="button" class="btn btn-primary btn-sm">Contact Us</button>
       </div>
